testing for mobile webkit and adding a class to the HTML element to signify mobile webkit.  Bit hacky but need to trigger overflow-x hidden (to prevent nasty horizontal scrolling), which is unsupported on FF and IE

--- a/wordpress/wp-content/themes/bd_2012/compiled.css
+++ b/wordpress/wp-content/themes/bd_2012/compiled.css
@@ -104,6 +104,9 @@ html {
   font-size: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
+  height: 100%;
+}
+html.mobile-webkit {
   overflow: hidden;
 }
 html,
